# seqlings

./: .gitignore  CURRICULUM.md  Cargo.toml  README.md
.claude/: settings.local.json
docs/: SELF-HOSTED-PLAN.md
exercises/: info.toml
exercises/00-intro/: 01-hello.seq  02-comments.seq  03-numbers.seq  README.md
exercises/01-stack-basics/: 01-push.seq  02-dup.seq  03-drop.seq  04-swap.seq  05-over.seq  06-rot.seq  README.md
exercises/02-stack-advanced/: 01-nip.seq  02-tuck.seq  03-2dup.seq  04-3drop.seq  05-pick.seq  06-roll.seq  README.md
exercises/03-arithmetic/: 01-add.seq  02-subtract.seq  03-multiply.seq  04-divide.seq  05-combine.seq  06-expressions.seq  README.md
exercises/04-floats/: 01-float-literals.seq  02-f-add.seq  03-f-multiply.seq  04-f-compare.seq  05-mixed.seq  README.md
exercises/05-comparison/: 01-equals.seq  02-less-greater.seq  03-not-equal.seq  04-less-equal.seq  05-chaining.seq  README.md
exercises/06-boolean/: 01-and.seq  02-or.seq  03-not.seq  04-combine.seq  README.md
exercises/07-conditionals/: 01-if-then.seq  02-if-else.seq  03-nested.seq  04-cond.seq  04-fizzbuzz.seq  05-fizzbuzz.seq  README.md
exercises/08-words/: 01-define.seq  02-stack-effects.seq  03-calling.seq  04-refactor.seq  05-helper-words.seq  06-documentation.seq  README.md
exercises/09-recursion/: 01-countdown.seq  02-factorial.seq  03-fibonacci.seq  04-accumulator.seq  05-mutual.seq  06-tco.seq  README.md
exercises/10-quotations/: 01-basics.seq  02-call.seq  03-times.seq  04-while.seq  05-until.seq  README.md  (+1 more)
src/: exercise.rs  main.rs  runner.rs
(+402 files in other folders)
